--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 dj-database-url==0.5.0
+Django==3.1.2
 django-bootstrap4==2.3.1
 django-filter==2.4.0
 django-sendgrid-v5==0.9.0
@@ -18,6 +19,7 @@ gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
 Pillow==8.0.1
+psycopg2==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
 python-http-client==3.3.1
